<resources>
    <string name="app_name">HEAR YOU</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_create">Create</string>
    <string name="nav_account">Account</string>
    <!--IntroActivity-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="got_it">GOT IT</string>
    <string name="slide1_title">We are here to Hear You</string>
    <string name="slide1_desc">Step out to take action when you decide to</string>
    <string name="slide2_title">Private and Safe Space</string>
    <string name="slide2_desc">Provide a private and reliable space for recording incidents</string>
    <string name="slide3_title">Matching System</string>
    <string name="slide3_desc">Connect other people who have been assaulted by the same perpetrator</string>
    <string name="get_started">Get Started</string>
    <!--Home-->
    <string name="home_title"><b>What To Expect at HearYou</b></string>
    <string name="home_content">
        We want to empower you to make the\n
        choice that\'s right for you. Here\'s what you\n
        need to know before you begin.\n\n

        Your record stays private to you.\n\n

        If you\'re not ready to answer a question\n
        choose "I\'d rather not say" or click "Next" to\n
        move forward
    </string>
    <string name="home_report_edit">EDIT</string>
    <string name="home_report_delete">DELETE</string>
    <string name="start_report_button">START A NEW REPORT</string>
    <!--SignIn & SignUp-->
    <string name="text_welcome">Welcome To HearYou</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_login">LOG IN</string>
    <string name="text_signup">REGISTER</string>
    <string name="msg_unvalid_email">Enter valid email address</string>
    <string name="text_create_account">Create account</string>
    <string name="text_ask_email">What\'s your email?</string>
    <string name="text_ask_password">Pick a password</string>
    <string name="text_password_check">Re-enter password</string>
    <string name="text_email_auth">We just sent the email to authenticate your account. Please check your email.</string>
    <!--Create Report-->
    <string name="whatBtn">What</string>
    <string name="whereBtn">Where</string>
    <string name="whenText">When</string>
    <string name="whoBtn">Who</string>
    <string name="detailsBtn">Details</string>
    <string name="saveBtn">Save and Exit</string>
    <string name="dialog_msg">Your report will be erased by closing the page.
        Are you sure you want to close?</string>
    <string name="dialog_title">Close Report</string>
    <string name="dialog_yes_btn">Yes</string>
    <string name="dialog_no_btn">No</string>
    <string name="facebook_URL">https://www.facebook.com/</string>
    <!--Report List View Item-->
    <string name="matching_found">matching reports found</string>
</resources>
